- update README.md - clean the code